Aula 7 - Exercicio de Repita tarefas

--- a/exercicios/jogo_adivinha.html
+++ b/exercicios/jogo_adivinha.html
@@ -12,13 +12,24 @@
     }
 
     var numPensado = Math.round(Math.random() * 10);
-    var chute = parseInt(prompt("Digite seu chute!"));
+    var tentativa = 1;
 
-    if (chute == numPensado) {
-        mostra("Você ACERTOU !!");
-    } else{
-        mostra("Você ERROU !!");
+    while (tentativa <= 3){
+            var chute = parseInt(prompt("Digite seu " +tentativa+ "° chute!"));
+
+            if(chute == numPensado) {
+
+                mostra("Você ACERTOU !! O numero pensado era " + numPensado);
+
+                break;
+
+            } else {
+                mostra("Você ERROU !!");
+            }
+        tentativa++;
     }
+
+    mostra("Fim");
 
 
 
